--- a/Projeto 3 - TecBlog/CSS/estilos.css
+++ b/Projeto 3 - TecBlog/CSS/estilos.css
@@ -42,3 +42,34 @@ a:hover {
     color: #f7b600;
 }
 
+#principal {
+    width: 920px;
+    margin: 0 auto;
+}
+
+#postagens {
+    width: 660px;
+    float: left;
+    background: wheat;
+}
+
+#barra-lateral {
+    width: 240px;
+    float: right;
+    background: grey;
+}
+
+#rodape {
+    background: gainsboro;
+    clear: both;
+    text-align: center;
+    padding: 25px;
+}
+
+#postagem {
+    padding: 15px;
+}
+
+#postagem-feed, .imagem-postagem {
+    width: 600px;
+}
