--- a/Projeto 3 - TecBlog/CSS/estilos.css
+++ b/Projeto 3 - TecBlog/CSS/estilos.css
@@ -24,6 +24,17 @@ h1 {
     font-size: 2.5em;
 }
 
+h2 {
+    color: whitesmoke;
+    font-size: 2.0em;
+    background: #f7b600;
+    padding: 15px
+}
+
+h3 {
+    
+}
+
 .branco {
     color: whitesmoke;
 }
@@ -33,11 +44,21 @@ a {
 }
 
 a:any-link {
-    color: #fff;
+    color: #f7b600;
     padding: 10px 12px;
 }
 
 a:hover {
+    background-color: whitesmoke;
+    
+}
+
+#menu a:any-link {
+    color: #fff;
+    padding: 10px 12px;
+}
+
+#menu a:hover {
     background-color: whitesmoke;
     color: #f7b600;
 }
@@ -45,12 +66,13 @@ a:hover {
 #principal {
     width: 920px;
     margin: 0 auto;
+    padding: 15px;
 }
 
 #postagens {
     width: 660px;
     float: left;
-    background: wheat;
+    background: whitesmoke;
 }
 
 #barra-lateral {
@@ -66,10 +88,30 @@ a:hover {
     padding: 25px;
 }
 
-#postagem {
+.postagem {
     padding: 15px;
 }
 
-#postagem-feed, .imagem-postagem {
+.postagem-feed, .imagem-postagem {
     width: 600px;
+}
+
+.cabecalho-postagem-feed {
+    background: white;
+    padding: 10px;
+    padding-left: 20px;
+}
+
+.corpo-postagem-feed {
+    background: rgb(223, 222, 222);
+    color: #4e4e4e;
+    padding: 15px;
+}
+
+.corpo-postagem-feed p {
+    margin-bottom: 10px;
+}
+
+.titulo-postagem-feed {
+    font-size: 1.25em;
 }
