--- a/DIO - HTML Web Developer/Interface Netflix/style/main.css
+++ b/DIO - HTML Web Developer/Interface Netflix/style/main.css
@@ -14,6 +14,7 @@
 body {
     background: var(--preta);
     font-family: 'Times New Roman', Times, serif;
+    color: #fff;
 }
 
 
@@ -22,20 +23,95 @@ header .container  {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 30px 0;
+    margin-left: 45px;
 }
 
 header .logoNetflex {
     color: var(--vermelho);
     font-family: 'Arial Black', Times;
-    font-size: 40px;
+    font-size: 45px;
+    border: solid var(--vermelho) 1px;
+    margin-right: 25px;
+}
+
+header nav {
+    padding: 20px;
 }
 
 header nav a {
     text-decoration: none;
     color: #AAA;
     margin-right: 10px;
+    font-size: 24px;
 }
 
 header nav a:hover {
     color: #fff;
+    font-size: xx-large;
+}
+
+/* Filme principal/ Splash Image */
+
+.splashImage {
+    font-size: 26px;
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url("/resources/scissor_seven_land_image.jpg");
+    background-size: cover;
+    min-height: 60vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.splashImage .splashDescription {
+    margin-bottom: 35px;
+}
+
+.splashImage .container {
+    margin-left: 65px;
+}
+
+.contentTitle{
+    margin-top: 10%;
+    font-size: 50px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.buttons {
+    display: flex;
+    margin-left: 40px;
+}
+
+.btn {
+    display: flex;
+    align-items: center;
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+    padding: 15px 40px;
+    margin-right: 15px;
+    font-size: 15px;
+    cursor: pointer;
+    transition: .2s ease all;
+}
+
+.btnInfo {
+    border-radius: 15px;
+}
+
+ion-icon {
+    margin-right: 15px;
+}
+
+.btn:hover {
+    background-color: white;
+    color: var(--preta);
+}
+
+.boxMovie {
+    height: 100%;
+    width: 100%;
+    display: block;
 }
